# sqlsaturday-memoryclerks

./: .gitignore  Memory Layout - SQL Server.excalidraw  MemoryClerks.twb  README.md  compose.yml  memclerks.csv
queries/: 0_memory_settings.sql  1_memory_clerks.sql  2_user_queries.sql  attach_database.sql
sqlserver-clerk-watcher/: Cargo.toml
sqlserver-clerk-watcher/src/: main.rs
