[package]
name = "sqlserver-memclerk-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
tiberius = { version = "0.12.2", default-features=false, features=["chrono", "time"] }
anyhow = "1.0.75"
tokio-util = { version = "0.7.9", features = ["compat"] }
csv = "1.3.0"